      - Separate unknown-control-interpreter from unusual-interpreter
        since it's much more likely to be an error.
      - Separate control-interpreter-in-usr-local from
        interpreter-in-usr-local since the severity is higher.
      - unusual-control-interpreter is certain, not possible.
      - Suppress some cases of multiple tags about the same basic problem.

  * private/update-never-seen:
    + [RA] Merge data from both test suites and use the tag files for the
      old test suite rather than relying on runtests -v.

  * t/runtests:
    + [RA] Check that a test produces all tags listed in Test-For and
      doesn't produce any tages listed in Test-Against.

 -- Russ Allbery <rra@debian.org>  Sun, 28 Dec 2008 13:02:03 -0800

lintian (2.1.3) unstable; urgency=low

  * Summary of tag changes:
    + Added
      - debian-watch-file-should-use-sf-redirector
      - debian-watch-file-specifies-wrong-upstream-version
      - debian-watch-file-specifies-old-upstream-version
      - extended-description-is-probably-too-short
      - shlib-without-versioned-soname

  * checks/description{,.desc}:
    + [RA] Check for extended descriptions shorter than three lines; they
      probably don't contain enough information.  Patch from Raphael
      Geissert.
  * checks/files{,.desc}:
    + [RA] Exclude __init__.py files and Doxygen-generated *.map files
      from zero-byte-file-in-doc-directory.  Improve the tag description
      to add a rationale and a suggestion for when overrides are
      appropriate.  Lower the certainty to possible.  (Closes: #507273)
    + [RA] Move the check for override files in the wrong location so that
      the check for subdirectories of /usr/share/lintian/overrides works
      and improve the tag description.
  * checks/nmu:
    + [RA] Recognize Ubuntu native packages by the target distribution and
      suppress NMU tags for them.  Based on a patch by Adrien Cunin.
      (Closes: #507740)
  * checks/shared-libs{,.desc}: