@@ -32,6 +32,10 @@ lintian (2.1.4) UNRELEASED; urgency=low
       - unusual-control-interpreter is certain, not possible.
       - Suppress some cases of multiple tags about the same basic problem.
 
+  * debian/rules:
+    + [RA] New check-tag target which runs all test cases in the new test
+      suite that check for or against a particular tag.
+
   * private/update-never-seen:
     + [RA] Merge data from both test suites and use the tag files for the
       old test suite rather than relying on runtests -v.
@@ -39,6 +43,8 @@ lintian (2.1.4) UNRELEASED; urgency=low
   * t/runtests:
     + [RA] Check that a test produces all tags listed in Test-For and
       doesn't produce any tages listed in Test-Against.
+    + [RA] Support finding and running all tests for or against a
+      particular tag.
 
  -- Russ Allbery <rra@debian.org>  Sun, 28 Dec 2008 13:02:03 -0800
 
